--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     <title>Flowstate</title>
   </head>
   <body>
-    <noscriptעליך להפעיל JavaScript בדפדפן כדי להשתמש באפליקציה הזו.</noscript>
+    <noscript>עליך להפעיל JavaScript בדפדפן כדי להשתמש באפליקציה הזו.</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
