--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="he">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -21,7 +21,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Flowstate</title>
+    <title>Flowstate | פלואו-סטייט</title>
+    <meta content="פלואו-סטייט הוא כלי כתיבה אונליין שעוזר לך להכנס למצב זרימה ולכתוב ללא הסחות דעת" name="description" />
+    <meta content="Flowstate | פשוט לכתוב" property="og:title" />
+    <meta content="פלואו-סטייט הוא כלי כתיבה אונליין שעוזר לך להכנס למצב זרימה ולכתוב ללא הסחות דעת" property="og:description" />
   </head>
   <body>
     <noscript>עליך להפעיל JavaScript בדפדפן כדי להשתמש באפליקציה הזו.</noscript>
