--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html lang="he">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
+	<head>
+		<meta charset="utf-8" />
+		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+		/>
+		<meta name="theme-color" content="#000000" />
+		<meta name="description" content="Web site created using create-react-app" />
+		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+		<!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
+		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+		<!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -21,15 +24,21 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Flowstate | פלואו-סטייט</title>
-    <meta content="פלואו-סטייט הוא כלי כתיבה אונליין שעוזר לך להכנס למצב זרימה ולכתוב ללא הסחות דעת" name="description" />
-    <meta content="Flowstate | פשוט לכתוב" property="og:title" />
-    <meta content="פלואו-סטייט הוא כלי כתיבה אונליין שעוזר לך להכנס למצב זרימה ולכתוב ללא הסחות דעת" property="og:description" />
-  </head>
-  <body>
-    <noscript>עליך להפעיל JavaScript בדפדפן כדי להשתמש באפליקציה הזו.</noscript>
-    <div id="root"></div>
-    <!--
+		<title>Flowstate | פלואו-סטייט</title>
+		<meta
+			content="פלואו-סטייט הוא כלי כתיבה אונליין שעוזר לך להכנס למצב זרימה ולכתוב ללא הסחות דעת"
+			name="description"
+		/>
+		<meta content="Flowstate | פשוט לכתוב" property="og:title" />
+		<meta
+			content="פלואו-סטייט הוא כלי כתיבה אונליין שעוזר לך להכנס למצב זרימה ולכתוב ללא הסחות דעת"
+			property="og:description"
+		/>
+	</head>
+	<body>
+		<noscript>עליך להפעיל JavaScript בדפדפן כדי להשתמש באפליקציה הזו.</noscript>
+		<div id="root"></div>
+		<!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -38,6 +47,5 @@
 
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+    --></body>
 </html>
